@@ -45,7 +45,7 @@
 </tr>
 <tr>
 <% n = 0 -%>
-<% @issue.custom_values.each do |value| -%>
+<% @issue.custom_field_values.each do |value| -%>
     <td valign="top"><b><%=h value.custom_field.name %>:</b></td><td valign="top"><%= simple_format(h(show_value(value))) %></td>
 <% n = n + 1
    if (n > 1) 
